traefik/middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-traefik-dashboard-prefix
  namespace: traefik
spec:
  addPrefix:
    prefix: /dashboard
