traefik/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-traefik-dashboard-prefix
  namespace: kube-system
spec:
  addPrefix:
    prefix: /dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-api-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.simulatan.me
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-traefik-dashboard-prefix@kubernetescrd,auth-forwardauth-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.simulatan.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              name: traefik
